# C12Adapter

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  README.txt  _buffer_8h.html  _buffer_bidirectional_8h.html  _buffer_circular_8h.html  _channel_8h.html  _channel_current_loop_8h.html  _channel_modem_8h.html  _channel_modem_callback_8h.html  _channel_optical_probe_8h.html  _channel_serial_port_8h.html  _channel_socket_8h.html  _channel_socket_base_8h.html  _channel_socket_callback_8h.html  _channel_socket_udp_8h.html  _channel_socket_udp_callback_8h.html  _log_file_8h.html  _log_file_reader_8h.html  _log_file_writer_8h.html  _m_aes_8h.html  _m_aes_eax_8h.html  _m_algorithm_8h.html  _m_automation_8h.html  _m_c_o_m_defs_8h.html  _m_c_o_m_defs_8h.js  _m_c_o_m_exceptions_8h.html  _m_c_o_m_factory_8h.html  _m_c_o_m_object_8h.html  _m_c_o_r_e_defs_8h.html  _m_c_o_r_e_defs_8h.js  _m_c_o_r_e_extern_8h.html  _m_c_o_r_e_extern_8h.js  _m_class_8h.html  _m_command_line_parser_8h.html  _m_critical_section_8h.html  _m_current_path_substitutor_8h.html  (+842 more)
.github/workflows/: codeql-analysis.yml
examples/cpp/Reader/: CMakeLists.txt  Setup.cpp  Setup.h  default.ini  reader.cpp
examples/cpp/c1222/: CMakeLists.txt  c1222_client.cpp
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  (+72 more)
src/MeteringSDK/: CMakeLists.txt  MeteringSDK.cmake
src/MeteringSDK/CMake/Modules/: MeteringSDK.cmake  MeteringSDKCPack.cmake  MeteringSDKDefaults.cmake  MeteringSDKInternal.cmake  MeteringSDKMacros.cmake  MeteringSDKSettings.cmake  MeteringSDKSettings.h.cmake
src/MeteringSDK/CMake/Toolchains/: arm-linux-moxa.cmake  arm-linux-uclibcgnueabi.cmake  arm-uclinuxeabi.cmake  linux-clang.cmake  linux-mingw32-toolchain.cmake
src/MeteringSDK/MCOM/: Buffer.cpp  Buffer.h  BufferBidirectional.cpp  BufferBidirectional.h  BufferCircular.cpp  BufferCircular.h  CMakeLists.txt  Channel.cpp  Channel.h  ChannelCurrentLoop.cpp  ChannelCurrentLoop.h  ChannelModem.cpp  ChannelModem.h  ChannelModemCallback.cpp  ChannelModemCallback.h  ChannelOpticalProbe.cpp  ChannelOpticalProbe.h  ChannelSerialPort.cpp  ChannelSerialPort.h  ChannelSocket.cpp  ChannelSocket.h  ChannelSocketBase.cpp  ChannelSocketBase.h  ChannelSocketCallback.cpp  ChannelSocketCallback.h  ChannelSocketUdp.cpp  ChannelSocketUdp.h  ChannelSocketUdpCallback.cpp  ChannelSocketUdpCallback.h  CommunicationCommand.cpp  CommunicationCommand.h  IdentifyString.cpp  IdentifyString.h  LogFile.cpp  LogFile.h  LogFileReader.cpp  LogFileReader.h  LogFileWriter.cpp  LogFileWriter.h  MCOM.h  (+36 more)
src/MeteringSDK/MCORE/: CMakeLists.txt  LuaIO.cpp  LuaIO.h  MAes.cpp  MAes.h  MAesEax.cpp  MAesEax.h  MAlgorithm.cpp  MAlgorithm.h  MAllErrors.inc  MAutomation.cpp  MAutomation.h  MCORE.h  MCORE.rc  MCOREDefs.cpp  MCOREDefs.h  MCOREErrors.inc  MCOREExtern.cpp  MCOREExtern.h  MCOREFuncs.h  MClass.cpp  MClass.h  MClassMethods.inc  MCommandLineParser.cpp  MCommandLineParser.h  MCriticalSection.cpp  MCriticalSection.h  MCurrentPathSubstitutor.cpp  MCurrentPathSubstitutor.h  MDes.cpp  MDes.h  MDictionary.cpp  MDictionary.h  MDynamicLibrary.cpp  MDynamicLibrary.h  MErrorEnum.cpp  MErrorEnum.h  MEvent.cpp  MEvent.h  MException.cpp  (+105 more)
src/MeteringSDK/MCORE/private/: MSerialPortAndroid.cxx  MSerialPortPosix.cxx  MSerialPortWindows.cxx  MTimeZoneAndroid.cxx  MTimeZoneMapping.cxx  MTimeZoneSimple.cxx  MTimeZoneTz.cxx  MTimeZoneWindows.cxx  aes_defs.h  aes_impl_cryptoapi.cxx  aes_impl_cryptodev.cxx  aes_impl_legacy.cxx  aes_impl_openssl.cxx  aes_unwrap.cxx  aes_wrap.cxx  base64.cxx  des.cxx  dtoa.c  encodings.cxx  ifaddrsAndroid.cxx  ifaddrsAndroid.h  ifaddrsWindows.cxx  ifaddrsWindows.h  pugiconfig.hpp  pugixml.cxx  pugixml.hpp  readme.txt
