CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_DISABLE_SOURCE_CHANGES ON)
SET(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
IF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
  MESSAGE(FATAL_ERROR "Use CMake out-source build!
Create an empty directory, and from there run:\n   cmake ${CMAKE_SOURCE_DIR}")
ENDIF()

INCLUDE(src/MeteringSDK/MeteringSDK.cmake)

ADD_SUBDIRECTORY(examples/cpp/Reader)
ADD_SUBDIRECTORY(examples/cpp/c1222)
