PROJECT(MCOM)

IF(NOT INSIDE_METERINGSDK)
  MESSAGE(FATAL_ERROR "INSIDE_METERINGSDK is not defined")
ENDIF()

ADD_DEFINITIONS(-DMCOM_PROJECT_COMPILING=1)

IF(M_DYNAMIC)
   GLOB_FILES(SOURCE_FILES *.h *.inc *.cpp *.rc)
ELSE()
   GLOB_FILES(SOURCE_FILES *.h *.inc *.cpp)
ENDIF()
ADD_PRECOMPILED_HEADER_FILE(MCOMExtern.h MCOMExtern.cpp SOURCE_FILES)

IF(M_DYNAMIC)
  ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})
ELSE()
  ADD_LIBRARY(${PROJECT_NAME} ${SOURCE_FILES})
ENDIF()
IF(WIN32)
  IF(NOT M_NO_MCOM_RAS_DIAL)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} wininet)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} rasapi32)
  ENDIF()
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} MCORE)
SET_UNIX_SOVERSION(${PROJECT_NAME} ${M_SDK_VERSION})

# INSTALL(TARGETS ${PROJECT_NAME}
#   RUNTIME DESTINATION bin
#   LIBRARY DESTINATION lib
#   ARCHIVE DESTINATION lib
#   COMPONENT ${PROJECT_NAME})
# INSTALL(DIRECTORY ./
#   DESTINATION include/MeteringSDK/${PROJECT_NAME}
#   FILES_MATCHING
#   PATTERN *.h
#   PATTERN *.inc
#   PATTERN .svn EXCLUDE
#   PATTERN locale EXCLUDE)
